fixed bug about the highlights overflows modal window

--- a/araqne-webconsole/src/main/resources/WEB-INF/css/app.css
+++ b/araqne-webconsole/src/main/resources/WEB-INF/css/app.css
@@ -4,6 +4,10 @@ topbar {
 	display: none;
 }
 
+code {
+	white-space: normal;
+}
+
 .icon-null {
 	background-position: 3000px 3000px;
 }
